        * Past due: Not completed sorted by due date due date descending, (today into the past)
        * Upcoming: Not completed sorted by due date ascending, (today into the future)
        * Direction of these views can be reversed, useful to see stickies with no due date assigned
      * Stickies can be dragged onto different boards
  * Updated to Contour 1.1.2.pre

* Bug Fix
  * Fixed a bug that prevented grouped stickies assigned to a board from being moved back to the holding pen

== 0.23.10

* Bug Fix
  * Creating a group from the calendar with a preselected project now correctly popuplates that project's boards and templates

== 0.23.9

* Enhancements
  * Project show page will now default to displaying the first alphabetically unarchived board by default
  * New boards can now be created when stickies are created
  * HTML Markup no longer shows up in a stickies short description
  * HTML Links in sticky descriptions now automatically have target="_blank" added as an attribute
  * Gravatar image's are now used for sticky comments

* Bug Fix
  * User activation emails are no longer sent out when a user's status is changed from pending to inactive
  * Sticky tooltips no longer show up over a new sticky popup

== 0.23.8

* Bug Fix
  * Users with now projects favorited should still be able to create stickies

== 0.23.7

* Enhancements
  * Frames have been renamed to Boards
    * Boards no longer include start and end dates
    * Boards can be archived
    * Project pages now only show stickies of active boards
  * Sticky completion emails on groups now highlight the sticky that was completed on the group

* Bug Fix
  * Pagination now works correctly on group pages where groups have more than 50 stickies

== 0.23.6

* Enhancements
  * Gem updates including Rails 3.2.9 and Ruby 1.9.3-p327
  * Updated to Contour 1.1.1 and replaced inline JavaScript with Unobtrusive JavaScript

== 0.23.5

* Enhancements