@@ -1,0 +1,33 @@
+Hello <%= @recipient.first_name %>,<br />
+<br />
+<%= @sender.name %> <span style="border:1px solid #366DC2;background-color:#c2daff">COMPLETED</span> the following <%= pluralize(@stickies.count, 'Sticky') %>.<br />
+
+<% if @stickies.size > 0 %>
+  <br />
+  <br />
+
+  <table>
+    <thead>
+      <tr style="text-align:left">
+        <th colspan="3"><span style="border:1px solid #366DC2;background-color:#c2daff">COMPLETED</span> Recently</th>
+      </tr>
+    </thead>
+
+    <% @stickies.group_by{|s| s.project_id}.each do |project_id, stickies| %>
+      <tr><td colspan="3" style="border-top:1px solid #ddd;"></td></tr>
+      <tr><td colspan="3" style="text-align:left;padding-top:10px;padding-right:20px;padding-bottom:10px;font-weight:bold"><%= ((project = Project.find_by_id(project_id)) ? link_to(project.name, "#{SITE_URL}/projects/#{project.id}") : 'No Project') %></td></tr>
+      <% stickies.each do |sticky| %>
+        <tr><%= @sticky = sticky; render partial: 'digest_sticky' %></tr>
+      <% end %>
+      <tr><td colspan="7" style="padding-bottom:10px"></td></tr>
+    <% end %>
+  </table>
+  <br />
+<% end %>
+
+<br />
+Thank you!<br />
+<br />
+<%= DEFAULT_APP_NAME %> Mailer<br />
+<br />
+<%= @footer_html %>
