@@ -1,0 +1,22 @@
+Hello <%= @recipient.first_name %>,
+
+<%= @sender.name %> completed the following <%= pluralize(@stickies.count, 'Sticky') %>.
+
+<% if @stickies.size > 0 %>
+COMPLETED Recently
+
+<% @stickies.group_by{|s| s.project_id}.each do |project_id, stickies| %>
+<%= ((project = Project.find_by_id(project_id)) ? "#{project.name} #{SITE_URL}/projects/#{project.id}" : 'No Project') %>
+
+<% stickies.each do |sticky| %>
+  <%= @sticky = sticky; render partial: 'digest_sticky' %>
+<% end %>
+
+<% end %>
+<% end %>
+
+Thank you!
+
+<%= DEFAULT_APP_NAME %> Mailer
+
+<%= @footer_txt %>
